--- a/index.html
+++ b/index.html
@@ -6,6 +6,31 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    h1 {
+      background: linear-gradient(90deg, #00C9FF, #92FE9D);
+      color: royalblue;
+      display: inline-block;
+      padding: 5px 10px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+      animation: through 5s infinite;
+    }
+
+    @keyframes through {
+      0% {
+        transform: translate(0, 0);
+      }
+
+      75% {
+        transform: translate(100vw, 0);
+      }
+
+      100% {
+        transform: translate(0, 0);
+      }
+    }
+  </style>
 </head>
 
 <body>
